--- a/index.html
+++ b/index.html
@@ -8,7 +8,27 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="music-player"></div>
+    <div class="music-player">
+
+        <h1 class="music-name">song</h1>
+        <p class="artist-name">artist</p>
+
+        <div class="disk"></div>
+
+        <div class="song-slider">
+            <input type="range" value="0" class="seek-bar">
+            <span class="current-time">00:00</span>
+            <span class="song-duration">00:00</span>
+        </div>
+
+        <div class="controls">
+            <button class="play-button">
+                <span></span>
+                <span></span>
+            </button>
+        </div>
+        
+    </div>
     <script>app.js</script>
 </body>
 </html>
