adding the functionality to the music app

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <audio src="" id="audio"></audio>
+    
     <div class="music-player">
 
         <h1 class="music-name">song</h1>
@@ -22,10 +25,12 @@
         </div>
 
         <div class="controls">
-            <button class="play-button">
+            <button class="btn back-button"><img src="" alt=""></button>
+            <button class="play-button pause">
                 <span></span>
                 <span></span>
             </button>
+            <button class="btn forward-button"><img src="" alt=""></button>
         </div>
         
     </div>
