still busy with app.js

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music Player</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
 
@@ -25,15 +25,16 @@
         </div>
 
         <div class="controls">
-            <button class="btn back-button"><img src="" alt=""></button>
+            <button class="btn back-button"><img src="images/backB(2).png" alt=""></button>
             <button class="play-button pause">
                 <span></span>
                 <span></span>
             </button>
-            <button class="btn forward-button"><img src="" alt=""></button>
+            <button class="btn forward-button"><img src="images/right(1).png" alt=""></button>
         </div>
         
     </div>
-    <script>app.js</script>
+    <script>src="/data.js"</script>
+    <script>src="/app.js"</script>
 </body>
 </html>
